test/compile-fail/resolution/type-existence/no-such-item/expected.txt
error: unresolved item `b`
 --> top.rhdl:1:10
  |
1 | fn a() -> b {}
  |           ^ no `b` item
